styleguide and mixin

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,8 @@
 @import "./initializers/variables";
 @import "./initializers/mixins";
 @import "./initializers/mediaQueries";
+@import "./initializers/utilityMixin";
+@import "./initializers/utilityClasses";
 @import "./initializers/typography";
 @import "./initializers/grid";
 @import "./initializers/combo";
