--- a/src/global/sass/initializers/_grid.scss
+++ b/src/global/sass/initializers/_grid.scss
@@ -65,8 +65,14 @@
 }
 
 // Place grid mixins here as needed:
+@include grid-item(1, 1);
 @include grid-item(1, 2);
 @include grid-item(1, 3);
 @include grid-item(2, 3);
+@include grid-item(1, 8);
 @include grid-item(1, 1, 'portable');
+@include grid-item(1, 1, 'phablet');
 @include grid-item(1, 2, 'portable');
+@include grid-item(1, 1, 'ipad')
+@include grid-item(1, 2, 'ipad');
+@include grid-item(1, 1, 'phablet');
