--- a/src/global/sass/initializers/_utilityClasses.scss
+++ b/src/global/sass/initializers/_utilityClasses.scss
@@ -1,14 +1,34 @@
 // Typography Utilities
-.u-italic {font-style: italic !important;}
-.u-bold {font-weight: 600 !important;}
-.u-fontSizeZero {font-size: 0 !important;}
+.u-italic { font-style: italic !important; }
+.u-bold { font-weight: 600 !important; }
+.u-fontSizeZero { font-size: 0 !important; }
 
 // Layout Helpers
-.u-block {display: block !important;}
-.u-inlineBlock {display: inline-block !important;}
-.u-center {margin-right: auto !important; margin-left: auto !important;}
-.u-alignCenter {text-align: center !important;}
-.u-alignRight {text-align: right !important;}
-.u-alignLeft {text-align: left !important;}
-.u-verticalAlignMiddle {vertical-align: middle !important;}
-.u-autoWidth {width: auto !important;}
+.u-block { display: block !important; }
+.u-block--phablet { @include media(phablet) { display: block !important; } }
+.u-inlineBlock { display: inline-block !important; }
+.u-center { margin-right: auto !important; margin-left: auto !important; }
+.u-alignCenter { text-align: center !important; }
+.u-alignCenter--ipad { @include media(ipad) { text-align: center; } }
+.u-alignRight { text-align: right !important; }
+.u-alignLeft { text-align: left !important; }
+.u-alignCenter--phablet { @include media(phablet) {text-align: center !important; } }
+.u-verticalAlignMiddle { vertical-align: middle !important; }
+.u-autoWidth { width: auto !important; }
+.u-widthFull { width: 100% !important; }
+.u-widthFull--phablet { @include media(phablet) { width: 100% !important; } }
+.u-relative {position: relative;}
+.u-visibilityHidden {visibility: hidden;}
+
+// Flexbox Utilities
+.u-flex { display: flex; }
+.u-flexJustifyContentBetween { justify-content: space-between !important; }
+.u-flexAlignContentBetween { align-content: space-between !important; }
+
+// Hide Stuff
+.u-hide { display: none !important; }
+.u-hide--portable { @include media(portable) { display: none !important; } }
+.u-hide--phablet { @include media(phablet) { display: none !important; } }
+
+// Margin Reset Classes
+.u-marginRightNone--phablet { @include media(phablet) { margin-right: 0 !important; } }
