--- a/src/global/sass/initializers/_variables.scss
+++ b/src/global/sass/initializers/_variables.scss
@@ -1,13 +1,11 @@
-///////////////////////
-//// BASE SETTINGS ////
-///////////////////////
+// BASE SETTINGS
+
 $base-font-size: 16px;
-$gutter: 20px;
+$gutter: 40px;
 $container-width: 1140px;
 
-///////////////////////
-//// BREAKPOINTS ////
-///////////////////////
+// BREAKPOINTS
+
 $breakpoints: (
   palm: '(max-width: 480px)',
   phablet: '(max-width: 600px)',
@@ -19,14 +17,7 @@ $breakpoints: (
   large: '(min-width: 481px)'
 );
 
-//////////////////
-//// COLOURS ////
-/////////////////
+// COLOURS
 
-// colours go here
 
-///////////////////////////////
-//// TYPEPOGRAPHY SETTINGS ////
-///////////////////////////////
-
-// typography settings (fonts, etc.)
+// TYPEPOGRAPHY SETTINGS
